--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
@@ -15,14 +15,14 @@
    "id": "bc3346f6",
    "metadata": {},
    "source": [
-    "For this Qiskit in Classroom module, students must have a working python environment with the following packages installed:\n",
-    "- qiskit v $\\geq$ 1.3\n",
-    "- qiskit_ibm_runtime v $\\geq$ 0.29.0\n",
-    "- qiskit-aer v $\\geq$ 15.0\n",
-    "- qiskit.visualization\n",
+    "For this Qiskit in Classroom module, students must have a working Python environment with the following packages installed:\n",
+    "- `qiskit` v $\\geq$ 1.3\n",
+    "- `qiskit-ibm-runtime` v $\\geq$ 0.29.0\n",
+    "- `qiskit-aer` v $\\geq$ 15.0\n",
+    "- `qiskit.visualization`\n",
     "\n",
-    "To set up and install the packages above, see the guidance on IBM Quantum's [Documentation page](https://docs.quantum.ibm.com/guides/install-qiskit).\n",
-    "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum. This can be done by following the steps outlined on [Documentation here](https://docs.quantum.ibm.com/guides/setup-channel)."
+    "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
+    "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud account](/docs/guides/cloud-setup) guide."
    ]
   },
   {
@@ -36,9 +36,9 @@
     "\n",
     "In this module, we'll explore one of the core principles at the heart of quantum theory: superposition. In our everyday experience, objects always have definite features. Their location, size, shape, color - everything about them - is determined and certain, even if we the observer haven’t yet measured them. In the quantum world, this isn’t necessarily the case. A quantum object can be in something called a “superposition” of multiple classically allowed states. When the superposition is measured, it will randomly “collapse” to one of those states.\n",
     "\n",
-    "In some ways, measuring a superposition state is like flipping a coin: there is no way to know ahead of time which way it will land. This fundamental indeterminism is and uncomfortable aspect of quantum mechanics that even Einstein had trouble with. He famously said, “God does not play dice” about this randomness. But, as we’ll see, God in fact does play dice —— and flip coins.\n",
+    "In some ways, measuring a superposition state is like flipping a coin: there is no way to know ahead of time which way it will land. This fundamental indeterminism is and uncomfortable aspect of quantum mechanics that even Einstein had trouble with. He famously said, “God does not play dice” about this randomness. But, as we’ll see, God in fact does play dice - and flip coins.\n",
     "\n",
-    "We’re going to think about a classical coin flip as an analogy to the measurement of a superposition state. And —— by playing with a \"quantum coin\" using Qiskit and a qubit on an IBM Quantum processor —— we'll quickly find the limits of that analogy."
+    "We’re going to think about a classical coin flip as an analogy to the measurement of a superposition state. And - by playing with a \"quantum coin\" using Qiskit and a qubit on an IBM Quantum processor - we'll quickly find the limits of that analogy."
    ]
   },
   {
@@ -54,7 +54,7 @@
     "S(coin) =  \\frac{1}{2}|up\\rangle + \\frac{1}{2}|down\\rangle\n",
     "$$\n",
     "\n",
-    "Here, the two terms represent the two possible outcomes of the flip, and their coefficients represent the probabilities of each of the outcomes. Note that typically, the \"$|\\rangle$\" (known as a \"ket\") is used to represent a quantum state, but here, we are talking about a *classical* probabilistic state. See [Lesson 1: Single Systems](https://learning.quantum.ibm.com/course/basics-of-quantum-information/single-systems) in the Basics of Quantum Information course to learn more about how we represent classical and quantum information.\n",
+    "Here, the two terms represent the two possible outcomes of the flip, and their coefficients represent the probabilities of each of the outcomes. Note that typically, the \"$|\\rangle$\" (known as a \"ket\") is used to represent a quantum state, but here, we are talking about a *classical* probabilistic state. See [Lesson 1: Single Systems](/learning/courses/basics-of-quantum-information/single-systems/introduction) in the Basics of Quantum Information course to learn more about how we represent classical and quantum information.\n",
     "\n",
     "If we were to flip a coin 1000 times and record the number of heads up and down, we would get something like this:"
    ]
@@ -141,26 +141,17 @@
    "id": "286f964c-08fb-4df7-be8c-b3c6eebdf8da",
    "metadata": {},
    "source": [
-    "So, in effect, applying the Hadamard gate is the analogue to flipping a coin. And just like we flipped the coin 1000 times to look at the statistics of the coin landing heads up or down, we can do something similar on Qiskit with our “quantum coin.\" We can use a Qiskit primitive called `Sampler` which will repeat a circuit several times to sample the statistics of the resulting state.\n",
+    "So, in effect, applying the Hadamard gate is the analogue to flipping a coin. And just like we flipped the coin 1000 times to look at the statistics of the coin landing heads up or down, we can do something similar on Qiskit with our “quantum coin.\" We can use a Qiskit primitive called `Sampler`, which will repeat a circuit several times to sample the statistics of the resulting state.\n",
     "\n",
     "First, we load the Qiskit Runtime service and primitives, then we select a backend on which to run the circuit:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3afaafe6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_18166/2317608366.py:4: DeprecationWarning: The \"ibm_quantum\" channel option is deprecated and will be sunset on 1 July. After this date, \"ibm_cloud\", \"ibm_quantum_platform\", and \"local\" will be the only valid channels. For information on migrating to the new IBM Quantum Platform, review the migration guide https://quantum.cloud.ibm.com/docs/migration-guides/classic-iqp-to-cloud-iqp .\n",
-      "  service = QiskitRuntimeService()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the Qiskit Runtime service\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
@@ -199,7 +190,7 @@
    "id": "a2e39d00-db68-46cb-b4af-7b2559955313",
    "metadata": {},
    "source": [
-    "If you don't have anymore time available on your account, you can also choose to run this on a simulator instead. Just uncomment the code and run the cell below to do so:"
+    "If you don't have any more time available on your account, you can also choose to run this on a simulator instead. Just uncomment the code and run the cell below to do so:"
    ]
   },
   {
@@ -243,19 +234,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e7930b08-d235-4c16-8af4-1d258dd80300",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/porter284/.pyenv/versions/3.11.12/lib/python3.11/site-packages/qiskit_ibm_runtime/qiskit_runtime_service.py:1111: UserWarning: IBM Quantum Platform is moving, and this version will be sunset on July 1. To get started on the new platform, read the migration guide at https://docs.quantum.ibm.com/migration-guides/classic-iqp-to-cloud-iqp\n",
-      "  warnings.warn(warning_message)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Execute\n",
     "\n",
@@ -361,26 +343,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "47ba8097-c109-4f9f-80a4-44e14ce044a2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/porter284/.pyenv/versions/3.11.12/lib/python3.11/site-packages/qiskit_ibm_runtime/qiskit_runtime_service.py:1111: UserWarning: IBM Quantum Platform is moving, and this version will be sunset on July 1. To get started on the new platform, read the migration guide at https://docs.quantum.ibm.com/migration-guides/classic-iqp-to-cloud-iqp\n",
-      "  warnings.warn(warning_message)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.010897832817337461\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Execute\n",
     "\n",
@@ -694,29 +660,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "06e21f78-e3e2-4fbf-b636-460f3ce5b3c7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/porter284/.pyenv/versions/3.11.12/lib/python3.11/site-packages/qiskit_ibm_runtime/qiskit_runtime_service.py:1111: UserWarning: IBM Quantum Platform is moving, and this version will be sunset on July 1. To get started on the new platform, read the migration guide at https://docs.quantum.ibm.com/migration-guides/classic-iqp-to-cloud-iqp\n",
-      "  warnings.warn(warning_message)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/extracted-outputs/06e21f78-e3e2-4fbf-b636-460f3ce5b3c7-1.avif\" alt=\"Output of the previous code cell\" />"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Transpile\n",
     "\n",
@@ -754,7 +701,7 @@
     "So, even from these few, simple experiments, you can already see the drastic difference this phase can make on a quantum circuit. It can be subtle and hard to see at first. In our first experiment, where we simply tossed our quantum coin with a Hadamard gate and measured the outcome of the flip revealed nothing of the effect of the phase. It was only when we dug deeper that we discovered the difference a phase can make. It can cause the same quantum gate to have quite literally the opposite effect on a qubit.\n",
     "\n",
     "\n",
-    "#### *Try it yourself:\n",
+    "#### Try it yourself:\n",
     "Edit the code cell below to change the phase such that the second Hadamard creates a superposition state with probabilities of 25% and 75% of finding the state in $|0\\rangle$ and $|1\\rangle$, respectively. Verify your answer with math."
    ]
   },
@@ -763,26 +710,7 @@
    "execution_count": 17,
    "id": "fef281ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/porter284/.pyenv/versions/3.11.12/lib/python3.11/site-packages/qiskit_ibm_runtime/qiskit_runtime_service.py:1111: UserWarning: IBM Quantum Platform is moving, and this version will be sunset on July 1. To get started on the new platform, read the migration guide at https://docs.quantum.ibm.com/migration-guides/classic-iqp-to-cloud-iqp\n",
-      "  warnings.warn(warning_message)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/extracted-outputs/fef281ef-1.avif\" alt=\"Output of the previous code cell\" />"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "qcoin_phase = QuantumCircuit(1)\n",
     "qcoin_phase.h(0)\n",
@@ -831,7 +759,7 @@
     "\n",
     "Say we want to construct an operation that, if applied twice, would be equivalent to the NOT gate. That is, we want a \"squareroot of NOT,\" or $\\sqrt{\\text{NOT}}$. We can do this by considering how the NOT gate is physically implemented on the coin: it's just a rotation of 180 degrees around, for example, the x-axis. So, if we were to rotate the coin just 90 degrees around the x-axis, it would be equivalent to a $\\sqrt{\\text{NOT}}$ gate.\n",
     "\n",
-    "Imagine that after applying the $\\sqrt{\\text{NOT}}$ gate, we want to ask whether the coin is heads up or heads down. It's neither -- it's standing on its edge relative to the vertical axis. But now, let's redefine our \"measurement\" of the coin to be first, collapsing the coin along the measurement axis (by squashing it with your hand so that it's lying flat), and second, checking whether it's heads up or down.\n",
+    "Imagine that after applying the $\\sqrt{\\text{NOT}}$ gate, we want to ask whether the coin is heads up or heads down. It's neither - it's standing on its edge relative to the vertical axis. But now, let's redefine our \"measurement\" of the coin to be first, collapsing the coin along the measurement axis (by squashing it with your hand so that it's lying flat), and second, checking whether it's heads up or down.\n",
     "\n",
     "If we perform this \"measurement\" on the coin standing on its edge, then the coin will \"collapse\" to heads up and heads down with equal probability. Much like the coin flip, in principle, the direction that the coin falls can be predicted based on the initial conditions of the coin and how exactly the force of our hand is applied to the coin to \"collapse\" it. But in practice, it should be difficult to predict which side will land up, so it is essentially random.\n",
     "\n",
@@ -871,25 +799,7 @@
    "execution_count": 19,
    "id": "28b2db66-c9d3-43a8-bfba-d90f6fd310e6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/porter284/.pyenv/versions/3.11.12/lib/python3.11/site-packages/qiskit_ibm_runtime/qiskit_runtime_service.py:1111: UserWarning: IBM Quantum Platform is moving, and this version will be sunset on July 1. To get started on the new platform, read the migration guide at https://docs.quantum.ibm.com/migration-guides/classic-iqp-to-cloud-iqp\n",
-      "  warnings.warn(warning_message)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-0.04010149]\n",
-      " [-0.99412092]\n",
-      " [ 0.01633764]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "obs1 = Pauli(\"X\")\n",
     "obs2 = Pauli(\"Y\")\n",
@@ -1103,13 +1013,13 @@
    "id": "f66be32d-6452-4ba0-8dcf-5e248ce37605",
    "metadata": {},
    "source": [
-    "## Conclusion - so what *is* a superposition state??\n",
+    "## Conclusion - so what *is* a superposition state?\n",
     "\n",
     "We started this module comparing the randomness of measuring a quantum superposition state to a coin flip. We likened the \"Hadamard gate\" that produces a quantum superposition to the act of flipping a coin. But, through a series of experiments, we learned that there are fundamental differences between a classical coin flip and a quantum superposition.\n",
     "\n",
     "We learned that there is actually nothing \"random\" about a qubit in a superposition state. It is like a coin sitting still in three-dimensional space. In fact, a coin that is free to rotate in 3 dimensions is a very close analogy to a particular way to visualize the quantum state of a qubit, called the Bloch vector. Quantum gates rotate this coin/Bloch vector deterministically and reversibly. It is only when we **measure** the qubit that any randomness is introduced. We compared this measurement process to squashing the coin so that it lies flat in the direction of the measurement axis.\n",
     "\n",
-    "Whether a quantum state is even in a superposition is really just in the eye of the beholder. As you've likely encountered before, we are free to choose our coordinate system —— $x$, $y$, and $z$ can point along any three orthogonal directions. So, if we have a superposition of 0 and 1 in one coordinate system, we can define a new coordinate system —— or equivalently, a new \"measurement basis\" —— in which the state is pointing purely in the $+z$ direction, and therefore not in a superposition state. So, when we say a qubit is in a superposition, we must also answer the question, \"superposition of *what*?\"\n",
+    "Whether a quantum state is even in a superposition is really just in the eye of the beholder. As you've likely encountered before, we are free to choose our coordinate system - $x$, $y$, and $z$ can point along any three orthogonal directions. So, if we have a superposition of 0 and 1 in one coordinate system, we can define a new coordinate system - or equivalently, a new \"measurement basis\" - in which the state is pointing purely in the $+z$ direction, and therefore not in a superposition state. So, when we say a qubit is in a superposition, we must also answer the question, \"superposition of *what*?\"\n",
     "\n",
     "You may leave this module with the impression that we've just removed all the mystery from quantum mechanics. After all, one of the supposedly \"weirdest\" aspects, the superposition state of a qubit, is really just as simple as a three-dimensional vector. But keep in mind that the coin is still only an analogy, and even the Bloch vector is only a visualization tool to calculate probabilities of measurement outcomes. We can’t say what a quantum state is *really* doing before it's measured. Because, checking that requires a measurement!\n",
     "\n",
