--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3afaafe6",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ibm_strasbourg\n"
+      "ibm_kingston\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "634fb53f-944c-4c2c-9e98-357acd0281aa",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e7930b08-d235-4c16-8af4-1d258dd80300",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e3b16bd7-276f-4dca-b56e-3dd88bb17b68",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/extracted-outputs/e3b16bd7-276f-4dca-b56e-3dd88bb17b68-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,17 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "775d62ec-3f26-4238-a1c5-292a6a606581",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<qiskit.circuit.instructionset.InstructionSet at 0x7fae6b1acd90>"
+       "<qiskit.circuit.instructionset.InstructionSet at 0x11df8c4f0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "25350a19-390d-450c-89f3-2646d5b6b1a7",
    "metadata": {},
    "outputs": [],
@@ -343,10 +343,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "47ba8097-c109-4f9f-80a4-44e14ce044a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.01925925925925926\n"
+     ]
+    }
+   ],
    "source": [
     "## Execute\n",
     "\n",
@@ -413,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2cc7a79f-527c-4af1-a207-06cfa20ac92c",
    "metadata": {},
    "outputs": [
@@ -421,7 +429,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0000617932398195\n"
+      "0.9944588104913188\n"
      ]
     }
    ],
@@ -515,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "610af24c-d489-4239-b31f-cea67a563b69",
    "metadata": {},
    "outputs": [
@@ -525,7 +533,7 @@
        "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/extracted-outputs/610af24c-d489-4239-b31f-cea67a563b69-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "6390f58c-057a-4ec2-a7ca-4a45410631c0",
    "metadata": {},
    "outputs": [
@@ -588,7 +596,7 @@
        "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/extracted-outputs/6390f58c-057a-4ec2-a7ca-4a45410631c0-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "ad819e8b-bc89-41d6-b375-428da51220be",
    "metadata": {},
    "outputs": [
@@ -643,7 +651,7 @@
        "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/extracted-outputs/ad819e8b-bc89-41d6-b375-428da51220be-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,10 +668,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "06e21f78-e3e2-4fbf-b636-460f3ce5b3c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/extracted-outputs/06e21f78-e3e2-4fbf-b636-460f3ce5b3c7-0.avif\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Transpile\n",
     "\n",
@@ -707,10 +726,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "fef281ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/extracted-outputs/fef281ef-0.avif\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "qcoin_phase = QuantumCircuit(1)\n",
     "qcoin_phase.h(0)\n",
@@ -772,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "ab97d4c5-285c-4efd-bc54-efda675e35fa",
    "metadata": {},
    "outputs": [
@@ -782,7 +812,7 @@
        "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/extracted-outputs/ab97d4c5-285c-4efd-bc54-efda675e35fa-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,10 +826,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "28b2db66-c9d3-43a8-bfba-d90f6fd310e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.01824233]\n",
+      " [-0.99494638]\n",
+      " [ 0.00345125]]\n"
+     ]
+    }
+   ],
    "source": [
     "obs1 = Pauli(\"X\")\n",
     "obs2 = Pauli(\"Y\")\n",
