--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
@@ -1088,7 +1088,7 @@
     "3. T/F Single-qubit quantum gates do not change the length of the Bloch vector.\n",
     "\n",
     "\n",
-    "### MC Questions:\n",
+    "### MC questions:\n",
     "\n",
     "1. Select the correct Bloch vector that represents the state $|\\Psi\\rangle = \\sqrt{\\frac{1}{3}}|0\\rangle + e^{i \\pi / 4} \\sqrt{\\frac{2}{3}}|1\\rangle$ :\n",
     "\n",
