--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -1113,7 +1113,7 @@
     "\n",
     "## Questions\n",
     "\n",
-    "### T/F Questions:\n",
+    "### T/F questions:\n",
     "\n",
     "1. T/F Albert Einstein argued that quantum mechanics was incomplete, as a theory, because it only described probabilities of outcomes, and not the underlying mechanism that determined those outcomes.\n",
     "2. T/F \"Hidden variables\" refers to the idea that two quantum mechanical particles can be entangled.\n",
@@ -1123,7 +1123,7 @@
     "6. T/F In quantum mechanics, under certain conditions, the state of particle A can be affected by the state of particle B, even if particles A and B are not in contact and do not exchange any particles.\n",
     "7. T/F We can map real world experiments onto quantum circuits.\n",
     "\n",
-    "### MC Questions:\n",
+    "### MC questions:\n",
     "\n",
     "1. Suppose a spin-0 particle decays into two spin-1/2 particles A and B. A measurement is made on particle A that reveals its spin has a projection along $+z$. Particle B now\n",
     "    - a. definitely has a spin projection along $-z$\n",
@@ -1171,7 +1171,7 @@
     "    - c. Exactly 0% on a noise-free simulator, near 0% on a real quantum computer\n",
     "    - d. Near 0% on a noise-free simulator, exactly 0% on a real quantum computer\n",
     "\n",
-    "### Discussion Questions:\n",
+    "### Discussion questions:\n",
     "\n",
     "1. Friends A, B, and C are discussing results from this lab, related to Bell's Inequality. Specifically, they are looking at the image that shows the quantum mechanical probability of measuring the same sign along axes is greater than that allowed by a hidden-variables treatment: $(P_\\text{same})_\\text{max,QM}>(P_\\text{same})_\\text{max,HV}$. Friend A says, \"This means that we didn't know the spin states prior to a measurement.\" Friend B says, \"No, it's more than that. This means the spins are not already pointing in a particular direction, prior to measurement. Although, the spin state might somehow be determined or stored somehow\" Friend C says, \"No, it's even more than that. This means the future spin state wasn't even decided by nature prior to measurement.\" With whom do you agree, and why?\n",
     "\n",
