--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -15,14 +15,14 @@
    "id": "39679663-00f6-48d4-acaf-d380b464b3fc",
    "metadata": {},
    "source": [
-    "For this Qiskit in Classroom module, students must have a working python environment with the following packages installed:\n",
-    "- qiskit v $\\geq$ 1.3\n",
-    "- qiskit_ibm_runtime v $\\geq$ 0.29.0\n",
-    "- qiskit-aer v $\\geq$ 15.0\n",
-    "- qiskit.visualization\n",
+    "For this Qiskit in Classroom module, students must have a working Python environment with the following packages installed:\n",
+    "- `qiskit` v $\\geq$ 1.3\n",
+    "- `qiskit-ibm-runtime` v $\\geq$ 0.29.0\n",
+    "- `qiskit-aer` v $\\geq$ 15.0\n",
+    "- `qiskit.visualization`\n",
     "\n",
-    "To set up and install the packages above, see the guidance on IBM Quantum's [Documentation page](https://docs.quantum.ibm.com/guides/install-qiskit).\n",
-    "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum. This can be done by following the steps outlined on [Documentation here](https://docs.quantum.ibm.com/guides/setup-channel)."
+    "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
+    "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud account](/docs/guides/cloud-setup) guide."
    ]
   },
   {
