--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "{/* cspell:ignore Gott würfelt nicht outcoming Rihanna Rihanna's Marshman */}\n",
     "\n",
-    "# The Nature of Quantum States: Hidden Variables vs Bell's Inequality"
+    "# The nature of quantum states: hidden variables versus Bell's inequality"
    ]
   },
   {
