--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -298,7 +298,7 @@
     "\n",
     "Einstein's and Born's options seemed like they would always yield the same results, since they only differed in their description of what happens prior to measurement. And yet, assuming there were instructions that pre-determined the sign of the spin measurement along certain axes, we obtained a constraint on the probability for the measurements to yield the same sign $(P_{\\text{same}})_\\text{Einstein}\\leq\\frac{4}{9}$. Then we assumed probability distributions as in quantum mechanics... and obtained a different value for $(P_{\\text{same}})_\\text{Born}=\\frac{1}{2}$. The prediction from quantum mechanics is higher than that allowed by the hidden variables treatment. So we can actually do an experiment and discover whether quantum mechanical states are determined by nature prior to measurement, or if they are truly in a probabilistic superposition of possible states.\n",
     "\n",
-    "This experiment has been done many times using many different physical systems, often photons. There are many subtle considerations, such as biases in measurement, the timing(simultaneity) of measurements, and many others. Over the decades, concerns about these subtleties have been steadily eroded. Tests are still implemented, as we learn more about reality, but there is now broad agreement that the answer you'll obtain here, using IBM Quantum Computers, is correct."
+    "This experiment has been done many times using many different physical systems, often photons. There are many subtle considerations, such as biases in measurement, the timing(simultaneity) of measurements, and many others. Over the decades, concerns about these subtleties have been steadily eroded. Tests are still implemented, as we learn more about reality, but there is now broad agreement that the answer you'll obtain here, using IBM quantum computers, is correct."
    ]
   },
   {
@@ -311,9 +311,9 @@
     "In keeping with our treatment above, let us define the direction of Lucas's measurement to be $+z$. This was convenient even in the algebraic approach, but it is especially convenient for quantum computation, since what is typically measured is the qubit's projection along $z$.\n",
     "We want to make a quantum circuit that gives us the same probability conditions as those above for $P_{++}$. We are free to orient our plane such that $\\phi=0$, and we obtain\n",
     "$$P_{++}=\\left|  \\left(_L\\langle+|_R\\left(\\cos(\\theta/2)\\langle+|+\\sin(\\theta/2)\\langle-|\\right)\\right)  \\frac{1}{\\sqrt{2}}\\left(|+\\rangle_L|-\\rangle_R-|-\\rangle_L|+\\rangle_R\\right)    \\right|^2$$\n",
-    "We need to know a few things about IBM Quantum Systems, to guide our discussion. Firstly, qubits start out initialized in the $|0\\rangle = |+\\rangle_z$ state. As mentioned, before, when measurements are made, they are along the $z$ axis. So the goal is to determine what operators we can insert between the measurement basis states $\\langle 0|\\langle 0|$ and the initial states of the qubits $|0\\rangle |0\\rangle$ to obtain the complicated expression above. For that, we'll need to review some basic gates in quantum computing.\n",
+    "We need to know a few things about IBM quantum computers, to guide our discussion. Firstly, qubits start out initialized in the $|0\\rangle = |+\\rangle_z$ state. As mentioned, before, when measurements are made, they are along the $z$ axis. So the goal is to determine what operators we can insert between the measurement basis states $\\langle 0|\\langle 0|$ and the initial states of the qubits $|0\\rangle |0\\rangle$ to obtain the complicated expression above. For that, we'll need to review some basic gates in quantum computing.\n",
     "\n",
-    "$X$ Gate: Equivalent to a NOT operation. Single-qubit gate.\n",
+    "$X$ gate: Equivalent to a NOT operation. Single-qubit gate.\n",
     "$$X|0\\rangle = |1\\rangle,\\\\X|1\\rangle=|0\\rangle$$\n",
     "$$X=\\begin{bmatrix} 0 & 1 \\\\ 1 & 0 \\end{bmatrix}$$\n",
     "\n",
@@ -350,7 +350,7 @@
    "id": "9fd9e765-d641-4f87-8bd8-eabe388c9209",
    "metadata": {},
    "source": [
-    "$H$ Hadamard Gate: Creates a superposition state. Single-qubit gate.\n",
+    "$H$ Hadamard gate: Creates a superposition state. Single-qubit gate.\n",
     "$$H|0\\rangle = \\frac{1}{2}\\left(|0\\rangle+|1\\rangle\\right),$$\n",
     "$$H|1\\rangle = \\frac{1}{2}\\left(|0\\rangle-|1\\rangle\\right)$$\n",
     "$$H=\\frac{1}{2}\\begin{bmatrix} 1 & 1 \\\\ 1 & -1 \\end{bmatrix}$$\n",
@@ -386,7 +386,7 @@
    "id": "8888558d-0327-4b0e-80f4-eb8653fdc77a",
    "metadata": {},
    "source": [
-    "CNOT Controlled-NOT Gate: This gate uses two qubits: a control and a target. Checks the state of a control qubit which is not changed. But if the control qubit is in the state $|1\\rangle$, the gate changes the state of the target qubit; if the state of the control qubit is $|0\\rangle$ no change is made at all. In the notation below, assume the first qubit is the control, and the second is the target.\n",
+    "CNOT Controlled-NOT gate: This gate uses two qubits: a control and a target. Checks the state of a control qubit which is not changed. But if the control qubit is in the state $|1\\rangle$, the gate changes the state of the target qubit; if the state of the control qubit is $|0\\rangle$ no change is made at all. In the notation below, assume the first qubit is the control, and the second is the target.\n",
     "$$CNOT|00\\rangle = |00\\rangle, \\\\ CNOT|01\\rangle = |01\\rangle \\\\ CNOT|10\\rangle = |11\\rangle \\\\ CNOT|11\\rangle = |10\\rangle$$\n",
     "\n",
     "A CNOT gate looks a bit different in a circuit, since it requires two qubits. This is how it is implemented:"
@@ -422,7 +422,7 @@
    "source": [
     "Note that the first qubit listed in `qc.cx(0,1)` is the control, and the second is the target. Diagrammatically, the target is the one with the \"+\" sign or cross on it.\n",
     "\n",
-    "$R_y(\\theta)$ Rotation Y Gate: Rotates the state about the y-axis. This is a single-qubit gate.\n",
+    "$R_y(\\theta)$ Rotation Y gate: Rotates the state about the y-axis. This is a single-qubit gate.\n",
     "$$R_y(\\theta)|0\\rangle = \\cos(\\theta/2)|0\\rangle+\\sin(\\theta/2)|1\\rangle,\\\\R_y(\\theta)|0\\rangle = -\\sin(\\theta/2)|0\\rangle+\\cos(\\theta/2)|1\\rangle$$\n",
     "$$R_y(\\theta)=\\begin{bmatrix} \\cos(\\theta/2) & -\\sin(\\theta/2) \\\\ \\sin(\\theta/2) & \\cos(\\theta/2) \\end{bmatrix}$$\n",
     "\n",
@@ -1064,7 +1064,7 @@
     "\n",
     "IBM Quantum courses:\n",
     "- [Quantum computing in practice](/learning/courses/quantum-computing-in-practice/index.mdx)\n",
-    "- [Basics of Quantum Information](/learning/courses/basics-of-quantum-information/index.mdx)\n",
+    "- [Basics of quantum information](/learning/courses/basics-of-quantum-information/index.mdx)\n",
     "\n",
     "Interesting quantum mechanics papers:\n",
     "- [Einstein Podolsky and Rosen paradox](https://cds.cern.ch/record/405662/files/PhysRev.47.777.pdf)\n",
