--- a/learning/courses/quantum-chem-with-vqe/classical-optimizers.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/classical-optimizers.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "Victoria Lipinska tells us about classical optimizers, and how they function as part of VQE.\n",
     "\n",
-    "You will hear about a few example optimizers, and how they perform in the presence and absence of noise.\n",
+    "You will hear about a few example optimizers and how they perform in the presence and absence of noise.\n",
     "\n",
     "<iframe src=\"https://video.ibm.com/embed/recorded/132414916\" style=\"border: 0;\" webkitallowfullscreen allowfullscreen frameborder=\"no\" width=\"690\" height=\"390\" referrerpolicy=\"no-referrer-when-downgrade\"></iframe>\n",
     "\n",
