added to course index

--- a/learning/index.mdx
+++ b/learning/index.mdx
@@ -18,3 +18,4 @@ If you don't see your course in the following list, edit `learning/index.mdx` an
 - [Quantum business foundations](/learning/courses/quantum-business-foundations)
 - [Foundations of quantum error correction](/learning/courses/foundations-of-quantum-error-correction)
 - [Qiskit in classrooms - quantum mechanics](/learning/courses/qiskit-in-classrooms-quantum-mechanics)
+- [Quantum chemistry with VQE](/learning/courses/quantum-chem-with-vqe)
