Corrected some iframe issues

--- a/learning/courses/quantum-chem-with-vqe/ansatz.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/ansatz.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "Watch as Victoria Lipinska explains what an ansatz is, and why we care about it in the context of VQE.\n",
     "\n",
-    "<iframe loading=\"lazy\" width=\"780\" height=\"438\" style=\"margin-top: 40px; margin-bottom: 40px;\" src=\"https://video.ibm.com/embed/recorded/132414879?showtitle=false&#x26;forced-quality=high\" title=\"Speaker intro\" frameborder=\"0\" allow=\"accelerometer;autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen referrerpolicy=\"no-referrer-when-downgrade\"></iframe>\n",
+    "<iframe width=\"780\" height=\"438\" src=\"https://video.ibm.com/embed/recorded/132414879?showtitle=false&#x26;forced-quality=high\"></iframe>\n",
     "\n",
     "**References**\n",
     "\n",
