Corrected some iframe issues

--- a/learning/courses/quantum-chem-with-vqe/classical-optimizers.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/classical-optimizers.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "You will hear about a few example optimizers and how they perform in the presence and absence of noise.\n",
     "\n",
-    "<iframe src=\"https://video.ibm.com/embed/recorded/132414916\" width=\"690\" height=\"390\"></iframe>\n",
+    "<iframe width=\"690\" height=\"390\" src=\"https://video.ibm.com/embed/recorded/132414916\"></iframe>\n",
     "\n",
     "**References**\n",
     "\n",
